fix: max full-width and full-bleed image width

--- a/styles/global-blocks.css
+++ b/styles/global-blocks.css
@@ -472,7 +472,7 @@
 
     & .image-with-caption__image img {
       width: calc(100vw - 4rem);
-      max-width: 102rem;
+      max-width: 66rem;
       margin-inline-start: 50%;
       transform: translateX(-50%);
       border-radius: var(--spectrum-corner-radius-800);
